# Basic-Digital-Wallet-API

./: README.md  pyproject.toml
digitalwallet_api/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
